objects/Org__c.object
<CustomObject>
    <description>Representation of Customer Relationship Hierarchy Node</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Business_Name_1__c</fullName>
        <label>Alt Business Name 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Business_Name_2__c</fullName>
        <label>Alt Business Name 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Business_Name_3__c</fullName>
        <label>Alt Business Name 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Relationship_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Relationship 1</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Orgs (Alternative Relationship 1)</relationshipLabel>
        <relationshipName>Alternative_Relationship_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Relationship_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Relationship 2</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Orgs (Alternative Relationship 2)</relationshipLabel>
        <relationshipName>Alternative_Relationship_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Relationship_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Relationship 3</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Orgs (Alternative Relationship 3)</relationshipLabel>
        <relationshipName>Alternative_Relationship_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_sales__c</fullName>
        <label>Annual sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Banding_Key__c</fullName>
        <description>The Banding Key used to dynamically reference Potential Bands.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Banding Key used to dynamically reference Potential Bands.</inlineHelpText>
        <label>Banding Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BatchProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchTemp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BatchTemp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Org_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Org Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBFS_Potential__c</fullName>
        <description>Potential calculated via DNB attributes and the Alteryx Model</description>
        <inlineHelpText>Potential calculated via DNB attributes and the Alteryx Model</inlineHelpText>
        <label>CBFS Industry Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBFS_Score__c</fullName>
        <description>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</description>
        <inlineHelpText>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</inlineHelpText>
        <label>CBFS Score</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEO_First_Name__c</fullName>
        <label>CEO First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEO_Last_Name__c</fullName>
        <label>CEO Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEO_Title__c</fullName>
        <label>CEO Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Potential__c</fullName>
        <description>Potential calculated via DNB attributes and the Alteryx Model</description>
        <inlineHelpText>Potential calculated via DNB attributes and the Alteryx Model</inlineHelpText>
        <label>CPD Industry Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Score__c</fullName>
        <description>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</description>
        <inlineHelpText>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</inlineHelpText>
        <label>CPD Score</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalId>true</externalId>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Core_Potential__c</fullName>
        <description>Core Potential calculated via DNB attributes and the Alteryx Model</description>
        <inlineHelpText>Core Potential calculated via DNB attributes and the Alteryx Model</inlineHelpText>
        <label>Core Industry Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core_Score__c</fullName>
        <description>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</description>
        <inlineHelpText>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</inlineHelpText>
        <label>Core Score</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Hierarchy_Type__c</fullName>
        <label>Corporate Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Family Location</fullName>
                </value>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Customers__c</fullName>
        <label>Count of Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creditworthiness__c</fullName>
        <label>Creditworthiness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_YTD_Sales_LY__c</fullName>
        <label>Customer YTD Sales LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_YTD_Sales_TY__c</fullName>
        <label>Customer YTD Sales TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DML2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML 2</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Orgs (DML 2)</relationshipLabel>
        <relationshipName>DML2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DML_1_Address__c</fullName>
        <formula>DML_1__r.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML 1</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Orgs (DML 1)</relationshipLabel>
        <relationshipName>DML1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DML_2_Address__c</fullName>
        <formula>DML2__r.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNB_Parent_DUNS__c</fullName>
        <label>DNB Parent DUNS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number_2__c</fullName>
        <externalId>true</externalId>
        <label>DUNS Number 2</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <externalId>true</externalId>
        <label>DUNS Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DUNS_Number_length__c</fullName>
        <formula>LEN(DUNS_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS Number length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DU_SIC_Code__c</fullName>
        <label>DU SIC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_ID__c</fullName>
        <externalId>true</externalId>
        <label>D&amp;B ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE_BAND__c</fullName>
        <description>The employee band calculated through the scoring process.</description>
        <label>EMPLOYEE_BAND</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Reliability_Code__c</fullName>
        <label>Employee Reliability Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FURN_Potential__c</fullName>
        <description>Potential calculated via DNB attributes and the Alteryx Model</description>
        <inlineHelpText>Potential calculated via DNB attributes and the Alteryx Model</inlineHelpText>
        <label>Furniture Industry Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FullAddress__c</fullName>
        <formula>Address_1__c   &amp; &apos; &apos; &amp; Address_2__c  &amp; &apos; &apos; &amp;  City__c  &amp; &apos; &apos; &amp;  State__c  &amp; &apos; &apos; &amp;  Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furn_Score__c</fullName>
        <description>The score of the core attribute based on DUNS information and Alteryx Formulas information.</description>
        <inlineHelpText>The score of the core attribute based on DUNS information and Alteryx Formulas information.</inlineHelpText>
        <label>Furniture Score</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_ULTIMATE_DUNS_NUM__c</fullName>
        <label>Global Ultimate DUNS#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_ULTIMATE_SALES_AMT__c</fullName>
        <label>Sales (Global Ultimate)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GU_Sic_Code__c</fullName>
        <label>GU Sic Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Employee_Count__c</fullName>
        <label>Global Ultimate Employee Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head Quarters</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Orgs (Head Quarters)</relationshipLabel>
        <relationshipName>HQ_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Headquarters_DUNS__c</fullName>
        <label>Headquarters DUNS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <label>Hierarchy Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Industry__c</fullName>
        <description>The High Level Industry for the Org predicted by SBI.</description>
        <inlineHelpText>The High Level Industry for the Org predicted by SBI.</inlineHelpText>
        <label>High Level Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>High_Level_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCustomerExist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify if the current Org has Customer tied to it. (includes Prospects)</description>
        <label>Is Customer Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_HQ__c</fullName>
        <formula>if( DUNS_Number__c  ==   GLOBAL_ULTIMATE_DUNS_NUM__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>Line Of Business</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Market_value__c</fullName>
        <label>Market value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minority_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minority Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OD_SIC__c</fullName>
        <description>A Workflow Rule called &apos;Org SIC Code&apos;  will write a two letter category code to this field based on the first two digits of the SIC_Code__c field. Used in the Sales Potential field calculations.</description>
        <label>OD SIC Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_DUNS__c</fullName>
        <label>Parent DUNS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipName>Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Band__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Potential Band matched for the Org.</description>
        <inlineHelpText>The Potential Band matched for the Org.</inlineHelpText>
        <label>Potential Band</label>
        <referenceTo>Potential_Band__c</referenceTo>
        <relationshipLabel>Orgs</relationshipLabel>
        <relationshipName>Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_DML_Address__c</fullName>
        <formula>Primary_DML__r.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary DML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_DML__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary DML</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Primary DML</relationshipLabel>
        <relationshipName>Primary_DML</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Industry__c</fullName>
        <label>Primary Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Private_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Private Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVENUE_BAND__c</fullName>
        <description>The revenue band calculated through the scoring model.</description>
        <label>REVENUE_BAND</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SECONDARY_NAME__c</fullName>
        <label>Secondary Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Description__c</fullName>
        <label>SIC Code Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_EMPLOYEE_CNT__c</fullName>
        <description>D&amp;B Site Employee Count</description>
        <label>Employee Count (Site)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SITE_SALES_AMT__c</fullName>
        <label>Sales (Site)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesDataBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SalesDataBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Data</label>
        <referenceTo>Sales_Data__c</referenceTo>
        <relationshipLabel>Orgs</relationshipLabel>
        <relationshipName>Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Potential_ER_High_Value__c</fullName>
        <formula>CASE( OD_SIC__c , 
&apos;BS&apos;, (10372 * (SITE_EMPLOYEE_CNT__c/100)) + (33 * (SITE_SALES_AMT__c/1000000)),
&apos;CO&apos;, (1875 * (SITE_EMPLOYEE_CNT__c/100)) + (271 * (SITE_SALES_AMT__c/1000000)),
&apos;ES&apos;, (12824 * (SITE_EMPLOYEE_CNT__c/100)) + (839 * (SITE_SALES_AMT__c/1000000)),
&apos;EA&apos;, (10400 * (SITE_EMPLOYEE_CNT__c/100)) + (423 * (SITE_SALES_AMT__c/1000000)),
&apos;FN&apos;, (34505 * (SITE_EMPLOYEE_CNT__c/100)) + (76 * (SITE_SALES_AMT__c/1000000)),
&apos;GV&apos;, (5010 * (SITE_EMPLOYEE_CNT__c/100)) + (476 * (SITE_SALES_AMT__c/1000000)),
&apos;IN&apos;, (7030 * (SITE_EMPLOYEE_CNT__c/100)) + (114 * (SITE_SALES_AMT__c/1000000)),

&apos;LG&apos;, (7077 * (SITE_EMPLOYEE_CNT__c/100)) + (2111 * (SITE_SALES_AMT__c/1000000)), 
&apos;MN&apos;, (2641 * (SITE_EMPLOYEE_CNT__c/100)) + (273 * (SITE_SALES_AMT__c/1000000)),
&apos;MH&apos;, (18752 * (SITE_EMPLOYEE_CNT__c/100)) + (926 * (SITE_SALES_AMT__c/1000000)),
&apos;OR&apos;, (1538 * (SITE_EMPLOYEE_CNT__c/100)) + (1759 * (SITE_SALES_AMT__c/1000000)),
&apos;RE&apos;, (41075 * (SITE_EMPLOYEE_CNT__c/100)) + (681 * (SITE_SALES_AMT__c/1000000)),
&apos;RT&apos;, (13883 * (SITE_EMPLOYEE_CNT__c/100)) + (453 * (SITE_SALES_AMT__c/1000000)),
&apos;SS&apos;, (8294 * (SITE_EMPLOYEE_CNT__c/100)) + (1193 * (SITE_SALES_AMT__c/1000000)),
&apos;UT&apos;, (10397 * (SITE_EMPLOYEE_CNT__c/100)) + (187 * (SITE_SALES_AMT__c/1000000)),
&apos;WT&apos;, (20702 * (SITE_EMPLOYEE_CNT__c/100)) + (73 * (SITE_SALES_AMT__c/1000000)),

(11830 * (SITE_EMPLOYEE_CNT__c/100)) + (854 * (SITE_SALES_AMT__c/1000000)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Potential ER High Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Potential_ER_Low_Value__c</fullName>
        <formula>CASE( OD_SIC__c , 
&apos;BS&apos;, (3297* (SITE_EMPLOYEE_CNT__c/100)) + (234 * (SITE_SALES_AMT__c/1000000)), 
&apos;CO&apos;, (1662 * (SITE_EMPLOYEE_CNT__c/100)) + (89 * (SITE_SALES_AMT__c/1000000)), 
&apos;ES&apos;, (2432 * (SITE_EMPLOYEE_CNT__c/100)) + (265 * (SITE_SALES_AMT__c/1000000)), 
&apos;EA&apos;, (2865 * (SITE_EMPLOYEE_CNT__c/100)) + (220 * (SITE_SALES_AMT__c/1000000)), 
&apos;FN&apos;, (5209 * (SITE_EMPLOYEE_CNT__c/100)) + (261 * (SITE_SALES_AMT__c/1000000)), 
&apos;GV&apos;, (4572 * (SITE_EMPLOYEE_CNT__c/100)) + (89 * (SITE_SALES_AMT__c/1000000)), 
&apos;IN&apos;, (4989 * (SITE_EMPLOYEE_CNT__c/100)) + (110 * (SITE_SALES_AMT__c/1000000)), 

&apos;LG&apos;, (13474 * (SITE_EMPLOYEE_CNT__c/100)) + (264 * (SITE_SALES_AMT__c/1000000)), 
&apos;MN&apos;, (1940 * (SITE_EMPLOYEE_CNT__c/100)) + (77* (SITE_SALES_AMT__c/1000000)), 
&apos;MH&apos;, (10568 * (SITE_EMPLOYEE_CNT__c/100)) + (1307 * (SITE_SALES_AMT__c/1000000)), 
&apos;OR&apos;, (3004 * (SITE_EMPLOYEE_CNT__c/100)) + (577 * (SITE_SALES_AMT__c/1000000)), 
&apos;RE&apos;, (4857 * (SITE_EMPLOYEE_CNT__c/100)) + (336 * (SITE_SALES_AMT__c/1000000)), 
&apos;RT&apos;, (1921 * (SITE_EMPLOYEE_CNT__c/100)) + (124 * (SITE_SALES_AMT__c/1000000)), 
&apos;SS&apos;, (2050 * (SITE_EMPLOYEE_CNT__c/100)) + (614 * (SITE_SALES_AMT__c/1000000)), 
&apos;UT&apos;, (2646 * (SITE_EMPLOYEE_CNT__c/100)) + (107 * (SITE_SALES_AMT__c/1000000)), 
&apos;WT&apos;, (2853 * (SITE_EMPLOYEE_CNT__c/100)) + (45 * (SITE_SALES_AMT__c/1000000)), 

(3487 * (SITE_EMPLOYEE_CNT__c/100)) + (273 * (SITE_SALES_AMT__c/1000000)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Potential ER Low Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Potential_Emp_High_Value__c</fullName>
        <formula>CASE( OD_SIC__c , 
&apos;BS&apos;, (8450 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;CO&apos;, (13271 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;ES&apos;, (14311 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;EA&apos;, (11497 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;FN&apos;, (24658 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;GV&apos;, (9630 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;IN&apos;, (10855 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;LG&apos;, (25997 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;MN&apos;, (5877 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;MH&apos;, (24616 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;OR&apos;, (12861 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;RE&apos;, (24853 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;RT&apos;, (6734 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;SS&apos;, (18691 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;UT&apos;, (11434 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;WT&apos;, (15217 * (SITE_EMPLOYEE_CNT__c/100)), 

(12834 * (SITE_EMPLOYEE_CNT__c/100))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Potential Emp High Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Potential_Emp_Low_Value__c</fullName>
        <formula>CASE( OD_SIC__c , 
&apos;BS&apos;, (2701 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;CO&apos;, (1656 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;ES&apos;, (1894 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;EA&apos;, (2817 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;FN&apos;, (4702 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;GV&apos;, (3499 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;IN&apos;, (5454 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;LG&apos;, (7419 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;MN&apos;, (1684 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;MH&apos;, (10463 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;OR&apos;, (3387 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;RE&apos;, (4094 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;RT&apos;, (1578 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;SS&apos;, (3192 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;UT&apos;, (2543 * (SITE_EMPLOYEE_CNT__c/100)), 
&apos;WT&apos;, (2313 * (SITE_EMPLOYEE_CNT__c/100)), 

(2611 * (SITE_EMPLOYEE_CNT__c/100)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Potential Emp Low Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Reliability_Code__c</fullName>
        <label>Sales Reliability Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_TY__c</fullName>
        <formula>Sales_Data__r.YTD_Sales_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_TY_text__c</fullName>
        <formula>&apos; $ &apos;+text(round(Sales_Data__r.YTD_Sales_TY__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales TY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>The segment estimated by the Alteryx model.</description>
        <inlineHelpText>The segment estimated by the Alteryx model.</inlineHelpText>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DML_Segments</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Small_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalId>true</externalId>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Indicator__c</fullName>
        <label>Subsidiary Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Potential__c</fullName>
        <description>Potential calculated via DNB attributes and the Alteryx Model</description>
        <inlineHelpText>Potential calculated via DNB attributes and the Alteryx Model</inlineHelpText>
        <label>Tech Industry Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_Score__c</fullName>
        <description>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</description>
        <inlineHelpText>The score of the core adjacency based on DUNS information and Alteryx Formulas information.</inlineHelpText>
        <label>Tech Score</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Account_ID__c</fullName>
        <label>Temp Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Industry_Score__c</fullName>
        <description>The total score calculated via DNB attributes and the Alteryx Model</description>
        <inlineHelpText>The total score calculated via DNB attributes and the Alteryx Model</inlineHelpText>
        <label>Total Industry Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Locations__c</fullName>
        <label>Total Number of Locations</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Potential__c</fullName>
        <description>Potential calculated via DNB attributes and the Alteryx Model</description>
        <inlineHelpText>Potential calculated via DNB attributes and the Alteryx Model</inlineHelpText>
        <label>Total Industry Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_assets__c</fullName>
        <label>Total assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Satellite Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_DUNS__c</fullName>
        <label>Ultimate DUNS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Name__c</fullName>
        <label>Ultimate Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_5_Digit__c</fullName>
        <formula>LEFT(Zip__c,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip 5 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>length_field__c</fullName>
        <formula>LEN( GLOBAL_ULTIMATE_DUNS_NUM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>length (field)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Org</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Name__c</columns>
        <columns>LOB__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Global_Ultimate_Employee_Count__c</columns>
        <columns>GLOBAL_ULTIMATE_SALES_AMT__c</columns>
        <columns>High_Level_Industry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Org-{0000}</displayFormat>
        <label>Org Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>